[gd_scene load_steps=11 format=3 uid="uid://s2dcpgi066gy"]

[ext_resource type="Script" path="res://menus/menu.gd" id="1_slpt8"]
[ext_resource type="Texture2D" uid="uid://dcparl8gbox7k" path="res://Whiteboard-Vector-PNG-Photos-3289639508.png" id="2_d40is"]
[ext_resource type="Texture2D" uid="uid://bwgl64rinsl7o" path="res://ui/sprites/boardwalk2.png" id="3_j0xgp"]
[ext_resource type="Texture2D" uid="uid://bp5lft3kbytc1" path="res://ui/sprites/startbutton.png" id="4_657yp"]
[ext_resource type="Texture2D" uid="uid://cuw51e0e2gmen" path="res://ui/sprites/creditsbutton.png" id="5_dodli"]
[ext_resource type="Texture2D" uid="uid://biui41qabk6dn" path="res://ui/sprites/OptionButton.png" id="5_gp7bj"]
[ext_resource type="Texture2D" uid="uid://fj8ln0fb8t72" path="res://ui/sprites/exitbutton.png" id="6_lejtg"]
[ext_resource type="PackedScene" uid="uid://blrjxml7nbhjp" path="res://options_window.tscn" id="7_bj4wj"]
[ext_resource type="PackedScene" uid="uid://cpndyiijj6wj8" path="res://debug_widget.tscn" id="8_abw83"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i1ho8"]
atlas = ExtResource("3_j0xgp")
region = Rect2(112, 440, 856, 176)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_slpt8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_d40is")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.98
offset_top = -523.5
offset_right = 136.98
offset_bottom = 523.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 80
theme_override_constants/margin_bottom = 155

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="BoardwalkLogo" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("AtlasTexture_i1ho8")
stretch_mode = 4

[node name="Space" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Start" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
focus_neighbor_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
texture_normal = ExtResource("4_657yp")
ignore_texture_size = true
stretch_mode = 5

[node name="Options" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Start")
texture_normal = ExtResource("5_gp7bj")
ignore_texture_size = true
stretch_mode = 5

[node name="Credits" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_previous = NodePath("../Options")
texture_normal = ExtResource("5_dodli")
ignore_texture_size = true
stretch_mode = 5

[node name="Exit" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_previous = NodePath("../Options")
texture_normal = ExtResource("6_lejtg")
ignore_texture_size = true
stretch_mode = 5

[node name="OptionsWindow" parent="." instance=ExtResource("7_bj4wj")]
visible = false

[node name="DebugWidget" parent="." instance=ExtResource("8_abw83")]
layout_mode = 1
offset_right = -16.0
offset_bottom = -16.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="close_requested" from="OptionsWindow" to="." method="_on_options_close_pressed"]
